--- a/index.html
+++ b/index.html
@@ -6,48 +6,102 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>NikNextt | Thoughtful Learning</title>
   <script src="https://cdn.tailwindcss.com"></script>
+  <script>
+    tailwind.config = {
+      theme: {
+        extend: {
+          colors: {
+            'primary-blue': '#2563EB',
+            'violet-main': '#7C3AED',
+            'teal-main': '#0D9488',
+            'amber-accent': '#F59E0B',
+            'pink-highlight': '#EC4899',
+          },
+          animation: {
+            'slow-fade': 'fadeIn 1.2s ease-out forwards',
+            'float': 'float 6s ease-in-out infinite',
+          },
+          keyframes: {
+            fadeIn: {
+              '0%': { opacity: '0', transform: 'translateY(10px)' },
+              '100%': { opacity: '1', transform: 'translateY(0)' },
+            },
+            float: {
+              '0%, 100%': { transform: 'translateY(0)' },
+              '50%': { transform: 'translateY(-20px)' },
+            }
+          }
+        }
+      }
+    }
+  </script>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Plus+Jakarta+Sans:wght@400;500;600;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Plus+Jakarta+Sans:wght@400;500;600;700;800&display=swap" rel="stylesheet">
   <style>
     body {
       font-family: 'Inter', sans-serif;
+      scroll-behavior: smooth;
     }
     h1, h2, h3, .font-heading {
       font-family: 'Plus Jakarta Sans', sans-serif;
     }
-    .gradient-soft {
-      background: linear-gradient(135deg, #f0f9ff 0%, #f5f3ff 100%);
+    .gradient-hero {
+      background: linear-gradient(135deg, #2563EB 0%, #7C3AED 100%);
     }
-    .gradient-dark {
+    .gradient-divider {
+      background: linear-gradient(90deg, #7C3AED 0%, #EC4899 100%);
+    }
+    .gradient-cool {
+      background: linear-gradient(135deg, #0D9488 0%, #2563EB 100%);
+    }
+    .gradient-btn {
+      background: linear-gradient(135deg, #2563EB 0%, #7C3AED 100%);
+      box-shadow: 0 4px 15px rgba(37, 99, 235, 0.3);
+    }
+    .gradient-footer {
       background: linear-gradient(135deg, #1e1b4b 0%, #2e1065 100%);
     }
-    .scrollbar-hide::-webkit-scrollbar {
-      display: none;
+    .gradient-text {
+      background: linear-gradient(135deg, #2563EB, #EC4899);
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
     }
-    .scrollbar-hide {
-      -ms-overflow-style: none;
-      scrollbar-width: none;
+    .card-gradient-border {
+      position: relative;
+      background: white;
+      border-radius: 1.5rem;
     }
-    .card-shadow {
-      box-shadow: 0 4px 20px -2px rgba(0, 0, 0, 0.05);
+    .card-gradient-border::before {
+      content: "";
+      position: absolute;
+      top: -1px; left: -1px; right: -1px; bottom: -1px;
+      background: linear-gradient(135deg, #0D9488, #2563EB);
+      z-index: -1;
+      border-radius: 1.6rem;
+      opacity: 0.3;
+      transition: opacity 0.3s ease;
     }
+    .card-gradient-border:hover::before {
+      opacity: 1;
+    }
+    .scrollbar-hide::-webkit-scrollbar { display: none; }
+    .scrollbar-hide { -ms-overflow-style: none; scrollbar-width: none; }
   </style>
 <script type="importmap">
 {
   "imports": {
-    "react/": "https://esm.sh/react@^19.2.4/",
     "react": "https://esm.sh/react@^19.2.4",
     "react-dom/": "https://esm.sh/react-dom@^19.2.4/",
+    "react/": "https://esm.sh/react@^19.2.4/",
     "vite": "https://esm.sh/vite@^7.3.1",
     "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2"
   }
 }
 </script>
 </head>
-<body class="bg-slate-50 text-slate-900 overflow-x-hidden">
+<body class="bg-white text-slate-900 overflow-x-hidden">
   <div id="root"></div>
-  <!-- This script tag is what was missing! It tells Vercel/Vite to load your app logic. -->
   <script type="module" src="./index.tsx"></script>
 </body>
 </html>
