--- a/index.html
+++ b/index.html
@@ -1,29 +1,28 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>NikNextt | Thoughtful Learning</title>
+  <title>NikNextt | Minutes of Clarity</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <script>
     tailwind.config = {
       theme: {
         extend: {
           colors: {
-            'primary-blue': '#2563EB',
-            'violet-main': '#7C3AED',
-            'teal-main': '#0D9488',
-            'amber-accent': '#F59E0B',
-            'pink-highlight': '#EC4899',
+            'brand-blue': '#2563EB',
+            'brand-violet': '#7C3AED',
+            'brand-teal': '#0D9488',
+            'brand-amber': '#F59E0B',
+            'brand-pink': '#EC4899',
           },
           animation: {
-            'slow-fade': 'fadeIn 1.2s ease-out forwards',
+            'fade-up': 'fadeUp 0.8s ease-out forwards',
             'float': 'float 6s ease-in-out infinite',
           },
           keyframes: {
-            fadeIn: {
-              '0%': { opacity: '0', transform: 'translateY(10px)' },
+            fadeUp: {
+              '0%': { opacity: '0', transform: 'translateY(20px)' },
               '100%': { opacity: '1', transform: 'translateY(0)' },
             },
             float: {
@@ -37,70 +36,70 @@
   </script>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Plus+Jakarta+Sans:wght@400;500;600;700;800&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;500;600;700;800&family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
   <style>
+    :root {
+      --max-width: 1140px;
+    }
     body {
       font-family: 'Inter', sans-serif;
       scroll-behavior: smooth;
     }
-    h1, h2, h3, .font-heading {
+    h1, h2, h3, h4, .font-heading {
       font-family: 'Plus Jakarta Sans', sans-serif;
     }
     .gradient-hero {
       background: linear-gradient(135deg, #2563EB 0%, #7C3AED 100%);
-    }
-    .gradient-divider {
-      background: linear-gradient(90deg, #7C3AED 0%, #EC4899 100%);
-    }
-    .gradient-cool {
-      background: linear-gradient(135deg, #0D9488 0%, #2563EB 100%);
-    }
-    .gradient-btn {
-      background: linear-gradient(135deg, #2563EB 0%, #7C3AED 100%);
-      box-shadow: 0 4px 15px rgba(37, 99, 235, 0.3);
-    }
-    .gradient-footer {
-      background: linear-gradient(135deg, #1e1b4b 0%, #2e1065 100%);
     }
     .gradient-text {
       background: linear-gradient(135deg, #2563EB, #EC4899);
       -webkit-background-clip: text;
       -webkit-text-fill-color: transparent;
     }
-    .card-gradient-border {
-      position: relative;
-      background: white;
-      border-radius: 1.5rem;
+    .gradient-btn {
+      background: linear-gradient(135deg, #2563EB 0%, #7C3AED 100%);
+      transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
     }
-    .card-gradient-border::before {
-      content: "";
-      position: absolute;
-      top: -1px; left: -1px; right: -1px; bottom: -1px;
-      background: linear-gradient(135deg, #0D9488, #2563EB);
-      z-index: -1;
-      border-radius: 1.6rem;
-      opacity: 0.3;
-      transition: opacity 0.3s ease;
+    .gradient-btn:hover {
+      box-shadow: 0 10px 25px -5px rgba(124, 58, 237, 0.4);
+      transform: translateY(-2px);
     }
-    .card-gradient-border:hover::before {
-      opacity: 1;
+    .card-hover {
+      transition: all 0.4s cubic-bezier(0.4, 0, 0.2, 1);
     }
-    .scrollbar-hide::-webkit-scrollbar { display: none; }
-    .scrollbar-hide { -ms-overflow-style: none; scrollbar-width: none; }
+    .card-hover:hover {
+      transform: translateY(-8px);
+      box-shadow: 0 20px 40px -10px rgba(0, 0, 0, 0.08);
+    }
+    .editable-focus:focus {
+      outline: 2px solid #7C3AED;
+      background: rgba(124, 58, 237, 0.05);
+      border-radius: 4px;
+    }
+    
+    /* Mobile-specific Utility Overrides */
+    @media (max-width: 639px) {
+      .section-padding {
+        padding-top: 48px;
+        padding-bottom: 48px;
+        padding-left: 16px;
+        padding-right: 16px;
+      }
+    }
   </style>
 <script type="importmap">
 {
   "imports": {
+    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2",
+    "react/": "https://esm.sh/react@^19.2.4/",
     "react": "https://esm.sh/react@^19.2.4",
     "react-dom/": "https://esm.sh/react-dom@^19.2.4/",
-    "react/": "https://esm.sh/react@^19.2.4/",
-    "vite": "https://esm.sh/vite@^7.3.1",
-    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2"
+    "vite": "https://esm.sh/vite@^7.3.1"
   }
 }
 </script>
 </head>
-<body class="bg-white text-slate-900 overflow-x-hidden">
+<body class="bg-[#FCFDFF] text-slate-900 overflow-x-hidden">
   <div id="root"></div>
   <script type="module" src="./index.tsx"></script>
 </body>
